# epistolary

./: .gitignore  CHANGELOG.md  Explore.ipynb  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: Overview.md
epistolary/: __init__.py  orchestrator.py  types.py
epistolary/cli/: __init__.py
epistolary/document_manager/: __init__.py  document_manager.py  filesystem_document_manager.py  remarkable_document_manager.py
epistolary/epiconfig/: __init__.py
epistolary/mailbox_manager/: __init__.py  mailbox_manager.py  smtpimap_mailbox_manager.py
epistolary/remarkable/: __init__.py
epistolary/text_extractor/: __init__.py  openai_text_extractor.py  tesseract_text_extractor.py  text_extractor.py
