[tool.poetry]
name = "epistolary"
version = "0.1.0"
description = "Respond to emails with your reMarkable tablet"
authors = ["Jordan Matelsky <j6k4m8@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
# https://github.com/Azeirah/remarks/tree/v6_with_rmscene:
redbox = "^0.2.1"
redmail = "^0.6.0"
pytesseract = "^0.3.10"
pymupdf = "^1.23.12"
pillow = "^10.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
