[project]
name = "epistolary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redbox>=0.2.1",
    "redmail>=0.6.0",
    "pytesseract>=0.3.13",
    "pillow>=10.4.0",
    "remarks",
    "boto3>=1.35.8",
    "openai>=1.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.3",
]

[tool.uv.sources]
remarks = { git = "https://github.com/azeirah/remarks", branch = "v6_with_rmscene" }
